--- a/Tag-Along/Base.lproj/LaunchScreen.storyboard
+++ b/Tag-Along/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,18 +21,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="Aid-2N-FWu">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="Aid-2N-FWu">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="LMN-9c-Rql">
-                                <rect key="frame" x="104.5" y="308" width="166" height="50"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_hdpi" translatesAutoresizingMaskIntoConstraints="NO" id="hjJ-h8-Xcf">
+                                <rect key="frame" x="133.5" y="162" width="107" height="102"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="LMN-9c-Rql" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="750-6V-2FW"/>
+                            <constraint firstItem="Aid-2N-FWu" firstAttribute="top" secondItem="hjJ-h8-Xcf" secondAttribute="bottom" constant="-264" id="2O4-G4-k5E"/>
+                            <constraint firstItem="hjJ-h8-Xcf" firstAttribute="centerX" secondItem="Aid-2N-FWu" secondAttribute="centerX" id="9Px-EA-k7C"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Aid-2N-FWu" secondAttribute="bottom" id="AhS-Dc-IZz"/>
-                            <constraint firstItem="LMN-9c-Rql" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Nkf-h2-8Nj"/>
                             <constraint firstItem="Aid-2N-FWu" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="VPw-Qm-bTu"/>
                             <constraint firstAttribute="trailing" secondItem="Aid-2N-FWu" secondAttribute="trailing" id="bVa-9g-Lhi"/>
                             <constraint firstItem="Aid-2N-FWu" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="jTo-lS-tfh"/>
@@ -46,6 +46,6 @@
     </scenes>
     <resources>
         <image name="bg" width="375" height="666"/>
-        <image name="logo" width="166" height="50"/>
+        <image name="logo_hdpi" width="107" height="102"/>
     </resources>
 </document>
